# AI-Safety-Middleware---Prompt-Firewall

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  ENTERPRISE_FEATURES.md  LICENSE  PROJECT_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  quickstart.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_enterprise_models.py
config/: patterns.yaml  policies.yaml  prometheus.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
protos/: audit.proto  policy_management.proto  prompt_validation.proto
scripts/: benchmark.py  generate_protos.sh  init_db.sql  seed_database.py
src/: __init__.py  config.py  main.py
src/api/: auth.py  dependencies.py
src/api/routes/: auth.py  health.py  policies.py  prompts.py
src/core/cache/: cache_manager.py  redis_client.py  vector_store.py
src/core/detection/: detector_pipeline.py  policy_engine.py  regex_detector.py  semantic_detector.py
src/db/: base.py  enterprise_models.py  models.py  session.py
src/db/repositories/: audit_repo.py  base_repo.py  detection_repo.py  policy_repo.py  prompt_repo.py
src/grpc_services/: __init__.py
src/services/: audit_service.py  policy_service.py  prompt_service.py
src/utils/: circuit_breaker.py  exceptions.py  logging.py  metrics.py
tests/: conftest.py
tests/fixtures/: sample_prompts.json
tests/unit/: test_regex_detector.py
